--- a/Ruta_Experiencia/estilos.css
+++ b/Ruta_Experiencia/estilos.css
@@ -1,3 +1,184 @@
+/* Inicio -> Estilos indez campus*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Inicio -> Header */
+.header-container {
+    display: inline-flex;
+    width: 100%;
+    height: 80px;
+    background-color: #411964;
+}
+.img-logo {
+    position: relative;
+    left: 2%;
+    top: 15%;
+    width: 15%;
+    height: 50px;
+}
+.nav-container {
+    position: relative;
+    left: 55%;
+    top: 28%;
+    width: 79%;
+    height: auto;
+}
+.nav-list {
+    width: 30%;
+    list-style: none;
+    display: inline-flex;
+    justify-content: space-around;
+    height: 32px;
+}
+.nav-list a:hover {
+    background-color: #A304A3;
+}
+.nav-item{
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+    font-family: sans-serif;
+    color: white;
+}
+/* Fin -> Header */
+
+/*---------------------------------------------------*/
+
+/* Inicio -> Middle */
+.middle-container{
+    width: 100%;
+    height: 700px;
+}
+
+.banner-container{
+    width: 100%;
+    height: 350px;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+}
+.banner-container:hover {
+
+}
+.img-banner{
+    width: 100%;
+    height: 350px;
+}
+.title-banner{
+    font-size: 40px;
+    font-family: sans-serif;
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/*---------------------------------------*/
+
+.campus-container{
+    width: 100%;
+    height: 350px;
+}
+.info-campus{
+    font-size: 35px;
+    position: relative;
+    top: 4%;
+    text-align: center;
+    font-family: sans-serif;
+    text-decoration: none;
+    color: black;
+}
+.nav-container-campus {
+    position: relative;
+    left: 13%;
+    top: 12%;
+}
+.nav-list-campus {
+    width: 75%;
+    list-style: none;
+    display: inline-flex;
+    justify-content: space-around;
+    position: absolute;
+}
+.item-container-campus{
+    width: 100%;
+    position: relative;
+    display: inline-block;
+    text-align: center; 
+}
+.item-container-campus:hover{
+    filter: grayscale(60%);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    font-weight: 600;
+}
+.img-campus {
+    width: 300px;
+    height: 200px;
+    border-radius: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.tittle-campus{
+    font-size: 30px;
+    font-family: sans-serif;
+    text-decoration: none;    
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/* Fin -> Middle */
+
+/* Inicio -> Footer */
+.footer-container {
+    width: 100%;
+    height: 80px;
+    background-color: #411964;
+}
+.footer-1{
+    width: 30%;
+    height: 80px;
+    float: left;
+}
+.footer-2 {
+    width: 70%;
+    height: 80px;
+    float: right;
+}
+.img-logo2{
+    position: relative;
+    top: 28%;
+    left: 2%;
+    width: 200px;
+    height: 40px;
+}
+.derechos-footer{
+    position: relative;
+    top: 28%;
+    left: 2%;
+    font-family: sans-serif;
+    font-size: small;
+    color: white;
+}
+
+.text-footer{
+    font-family: sans-serif;
+    color: white;
+}
+.img-redes{
+    width: 30px;
+    height: 30px;
+}
+/* Fin -> Footer */
+
+/* Fin -> Estilos indez campus*/
+
 :root {
     --primerperiodo: rgb(2, 2, 198);
     --segundoperiodo: rgb(104, 2, 193);
