--- a/Ruta_Experiencia/estilos.css
+++ b/Ruta_Experiencia/estilos.css
@@ -14,9 +14,9 @@
 }
 .img-logo {
     position: relative;
-    left: 2%;
+    left: 6%;
     top: 15%;
-    width: 15%;
+    width: 13%;
     height: 50px;
 }
 .nav-container {
@@ -141,39 +141,46 @@
     height: 80px;
     background-color: #411964;
 }
-.footer-1{
+.footer-cont1{
     width: 30%;
     height: 80px;
     float: left;
 }
-.footer-2 {
-    width: 70%;
-    height: 80px;
-    float: right;
-}
 .img-logo2{
     position: relative;
-    top: 28%;
-    left: 2%;
+    top: 18%;
+    left: 20%;
     width: 200px;
     height: 40px;
 }
 .derechos-footer{
     position: relative;
-    top: 28%;
-    left: 2%;
+    top: 20%;
+    left: 20%;
     font-family: sans-serif;
     font-size: small;
     color: white;
 }
-
+.footer-cont2 {
+    width: 70%;
+    height: 80px;
+    float: right;
+}
 .text-footer{
     font-family: sans-serif;
+    font-size: 18px;
     color: white;
+    position: relative;
+    top: 10%;
+    left: 80%;
 }
 .img-redes{
+    position: relative;
+    top: 18%;
+    left: 80%;
     width: 30px;
-    height: 30px;
+    height: 30px; 
+    filter: invert(100%); 
 }
 /* Fin -> Footer */
 
